Improved hover events to prevent sticky social buttons on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -108,7 +108,6 @@ header {
 
 .social-links {
     font-size: 28px;
-    /*font-size: 36px;*/
 }
 
 ul {
@@ -141,8 +140,17 @@ ul li a i:visited {
     opacity: 1.0;
 }
 
-ul li a i:hover {
-    opacity: 0.7;
+@media (hover: hover) {
+    ul li a i:hover {
+        opacity: 0.7;
+    }
+}
+
+@media (hover: none) {
+    ul li a i:hover {
+        color: #fff;
+        opacity: 1.0;
+    }
 }
 
 ul li a i:active {
